--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,3 +36,44 @@ body {
   align-content: flex-start;
   margin-top: 2em;
 }
+
+body {
+  display: flex;
+  justify-content: center;
+}
+
+
+
+@media only screen and (max-width: 600px) {
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+  .jumbotron {
+    background-color: darkgrey;
+    color: white;
+    width: 30em;
+    margin: 2em;
+    padding: 2em;
+  }
+  
+  #bear-form {
+    width: 30em;
+  }
+  
+  .lead {
+    font-size: 1.2em;
+  }
+  
+  .form-control {
+    width: 25em;
+  }
+
+  #river {
+    display: flex;
+    justify-content: center;
+    flex-flow: wrap-reverse;
+    margin-top: 2em;
+  }
+  
+}
